# wrap_gtest_locally

./: .gitignore  README.md  meson.build  mytest.cc
subprojects/: gtest.wrap
